# civic-radar

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  railway.json  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_source.yml  parser_broken.yml
.github/workflows/: ci-api.yml  ci-crawlers.yml  ci-web.yml  codeql.yml
apps/api/: Dockerfile  alembic.ini  docker-entrypoint.sh  fly.toml  pyproject.toml
apps/api/src/civic_radar/: __init__.py  config.py  logging.py  main.py
apps/api/src/civic_radar/api/: health.py
apps/api/src/civic_radar/api/v1/: __init__.py  match.py  opportunities.py  sources.py  stats.py
apps/api/src/civic_radar/cli/: __init__.py  app.py  seed.py
apps/api/src/civic_radar/db/: __init__.py  models.py  session.py
apps/api/src/civic_radar/db/migrations/: env.py  script.py.mako
apps/api/src/civic_radar/db/migrations/versions/: 20260527_0001_initial.py
apps/api/src/civic_radar/match/: __init__.py  scoring.py
apps/api/src/civic_radar/schemas/: __init__.py  match.py  opportunity.py  source.py  stats.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_health.py  test_match.py  test_opportunities.py  test_sources.py  test_stats.py
apps/api/tests/unit/: test_config.py  test_match_scoring.py  test_schemas.py
apps/web/: Dockerfile  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json  vitest.config.ts
apps/web/src/: global.d.ts  test-setup.ts
apps/web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/src/app/about/: page.tsx
apps/web/src/app/contribute/: page.tsx
apps/web/src/app/opportunities/: page.tsx
apps/web/src/app/opportunities/[id]/: page.tsx
apps/web/src/app/profile-match/: page.tsx
apps/web/src/app/sources/: page.tsx
apps/web/src/components/: match-score-visual.tsx  opportunity-card.tsx  providers.tsx  site-footer.tsx  site-header.tsx  source-confidence-badge.tsx  theme-provider.tsx  theme-toggle.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  skeleton.tsx
apps/web/src/lib/: api-client.ts  types.ts  utils.test.ts  utils.ts
crawlers/: pyproject.toml
crawlers/crawlers/core/: __init__.py  base.py  models.py  normalizer.py  protocols.py  registry.py
crawlers/crawlers/core/tests/: test_normalizer.py  test_registry.py
crawlers/crawlers/sources/: __init__.py
crawlers/crawlers/sources/cebraspe/: __init__.py  config.yaml  crawler.py  parser.py
crawlers/crawlers/sources/cebraspe/fixtures/: concurso_encerrado.html  concursos_abertos.html  sem_salario.html
crawlers/crawlers/sources/cebraspe/tests/: test_parser.py
crawlers/crawlers/sources/fgv/: __init__.py  config.yaml  crawler.py  parser.py
crawlers/crawlers/sources/fgv/fixtures/: empty.html  index.html  regional.html
crawlers/crawlers/sources/fgv/tests/: test_parser.py
crawlers/crawlers/sources/pci_concursos/: __init__.py  config.yaml  crawler.py  parser.py
crawlers/crawlers/sources/pci_concursos/fixtures/: abertos.html  encerrado.html  sem_inscricoes.html
crawlers/crawlers/sources/pci_concursos/tests/: test_parser.py
data/seeds/: opportunities_seed.json
docs/: API.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_SOURCES.md  GOVERNANCE.md  PRODUCT_FOUNDATION.md  ROADMAP.md  SECURITY.md  TECH_FOUNDATION.md
docs/adr/: 0001-use-fastapi.md  0002-sqlite-first.md  0003-agpl-license.md  0004-shadcn-ui.md  0005-uv-ruff.md  0006-crawler-plugins.md
