[project]
name = "civic-radar"
version = "0.1.0"
description = "Open source radar for Brazilian public career opportunities"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "CivicRadar contributors" },
]
keywords = ["civic-tech", "brazil", "public-tenders", "concursos-publicos", "open-data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
]

# This root pyproject.toml is intentionally minimal — it defines the uv workspace.
# Actual dependencies live in apps/api/pyproject.toml and crawlers/pyproject.toml.

[tool.uv.workspace]
members = ["apps/api", "crawlers"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    ".venv",
    "build",
    "dist",
    "apps/web",
    "node_modules",
    "data",
    "**/migrations/versions",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
    "PL",    # pylint (subset)
    "PT",    # pytest-style
    "TID",   # tidy-imports
]
ignore = [
    "E501",     # line too long — formatter handles it
    "PLR0913",  # too many arguments
    "PLR2004",  # magic numbers in tests
    "PLW0603",  # global statement (used intentionally for engine caching)
    "PLC0415",  # imports at top-level (lazy imports avoid circular deps)
    "RUF001",   # ambiguous unicode (intentional PT-BR typography like en-dash)
    "RUF002",   # ambiguous unicode in docstrings
    "RUF003",   # ambiguous unicode in comments
    "PLR0911",  # too many return statements
    "PLR0912",  # too many branches
    "PLR0915",  # too many statements
    "SIM117",   # multiple with statements
    "B008",     # function call in argument defaults (FastAPI Depends pattern)
    "TID252",   # relative imports forbidden — we use absolute, but tests use src layout
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101", "PLR2004", "ARG"]
"**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["civic_radar", "crawlers"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
exclude = [
    "\\.venv",
    "build",
    "dist",
    "apps/web",
    "node_modules",
    ".*/migrations/versions/.*",
]

[[tool.mypy.overrides]]
module = [
    "selectolax.*",
    "pdfplumber.*",
    "freezegun.*",
    "crawlers.*",
    "yaml",
    "protego",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "*.tests.*",
    "crawlers.sources.*.tests.*",
    "crawlers.core.tests.*",
]
disallow_untyped_defs = false
warn_return_any = false
disable_error_code = ["type-arg", "no-untyped-def"]

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["apps/api/tests", "crawlers"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
markers = [
    "unit: fast, isolated unit tests",
    "integration: tests that use DB or HTTP",
    "slow: tests that take >1s",
]

[tool.coverage.run]
source = ["apps/api/src", "crawlers"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__main__.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
precision = 1
show_missing = true
skip_covered = false
