[project]
name = "civic-radar-crawlers"
version = "0.1.0"
description = "CivicRadar — source-specific crawlers and parsers"
readme = "../README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }

dependencies = [
    # HTTP
    "httpx>=0.27.0",

    # HTML parsing — fast, modern alternative to BeautifulSoup
    "selectolax>=0.3.0",

    # PDF parsing
    "pdfplumber>=0.11.0",
    "pypdf>=5.0.0",

    # Robots.txt
    "protego>=0.3.0",

    # Validation
    "pydantic>=2.9.0",

    # Logging
    "structlog>=24.4.0",

    # YAML for source configs
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "respx>=0.21.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-pyyaml>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crawlers"]

[tool.pytest.ini_options]
testpaths = ["crawlers"]
addopts = ["-ra", "--strict-markers"]
asyncio_mode = "auto"
