[project]
name = "civic-radar-api"
version = "0.1.0"
description = "CivicRadar — FastAPI backend"
readme = "../../README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }

dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Validation & settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "greenlet>=3.1.0",

    # CLI
    "typer>=0.15.0",
    "rich>=13.9.0",

    # Logging
    "structlog>=24.4.0",

    # HTTP client (crawlers e healthcheck)
    "httpx>=0.27.0",

    # API enhancements
    "scalar-fastapi>=1.0.3",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "respx>=0.21.0",
    "freezegun>=1.5.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-python-dateutil>=2.9.0",
]

[project.scripts]
civic_radar = "civic_radar.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/civic_radar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=civic_radar",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=70",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/civic_radar"]
omit = ["*/tests/*", "*/migrations/*"]
branch = true
